--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -1,1 +1,36 @@
+* {
+	font-family: "Neuton", serif;
+	margin: 0;
+	padding: 0;
+}
 
+nav {
+	height: fit-content;
+	background-color: #5e6674;
+}
+
+.nav_logo,
+.nav_link {
+	color: #f6fdff;
+	text-decoration: none;
+}
+
+.nav_logo:hover,
+.nav_link:hover {
+	color: white;
+}
+
+.form_heading {
+	color: #5e6674;
+}
+
+.form_input {
+	background-color: #d9d9d9;
+	color: #5e6674;
+	border: 4px solid #5e6674;
+}
+
+.form_button {
+	color: white;
+	background-color: #5e6674;
+}
